apps/circuit-breaker-service/overlays/dev/circuit-breaker-service-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: circuit-breaker-service
spec:
  hostnames:
    - cb-dev.apps.cluster-pvsbw.dyn.redhatworkshops.io
