apps/circuit-breaker-service/overlays/dev/httproute-circuit-breaker-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: circuit-breaker-service
spec:
  hostnames:
    # Sustituir por el dominio del cluster de DESARROLLO: apps.<cluster-dev>.<dominio-base>
    - apis.apps.cluster-dev.ejemplo.com
